# gaussian-grouping

./: clip_camvid.py  clip_dataset.py  convert2onnx.py  convert_camvid_labels.py  edit_object_removal.py  export_clip_text.py  replication_tokenizer.py  train.py
config/gaussian_dataset/: train_figuritas.json
config/object_removal/: figurines.json  figuritas.json
cpp_clip_tokenizer/: CMakeLists.txt  tokenizer.cpp
scene/: dataset_readers.py  gaussian_model.py
